// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer /w as drawer bottom 1`] = `
<div
  class="Drawerstyles__Fade-sc-34en6x-0 cIwlCK"
>
  <div
    class="Drawerstyles__Box-sc-34en6x-1 oNlZK"
    height="0px"
    orientation="bottom"
    width="0px"
  >
    <div
      class="Drawerstyles__CloseIcon-sc-34en6x-3 eSIqqc"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Drawerstyles__Content-sc-34en6x-2 hyZwjZ"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Drawer /w as drawer left 1`] = `
<div
  class="Drawerstyles__Fade-sc-34en6x-0 cIwlCK"
>
  <div
    class="Drawerstyles__Box-sc-34en6x-1 bskFvj"
    height="0px"
    orientation="left"
    width="0px"
  >
    <div
      class="Drawerstyles__CloseIcon-sc-34en6x-3 eSIqqc"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Drawerstyles__Content-sc-34en6x-2 hyZwjZ"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Drawer /w as drawer left show 1`] = `
<div
  class="Drawerstyles__Fade-sc-34en6x-0 fUpiCd"
>
  <div
    class="Drawerstyles__Box-sc-34en6x-1 dKuBiN"
    height="0px"
    orientation="left"
    width="0px"
  >
    <div
      class="Drawerstyles__CloseIcon-sc-34en6x-3 eSIqqc"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Drawerstyles__Content-sc-34en6x-2 hyZwjZ"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Drawer /w as drawer right 1`] = `
<div
  class="Drawerstyles__Fade-sc-34en6x-0 cIwlCK"
>
  <div
    class="Drawerstyles__Box-sc-34en6x-1 iRIEdk"
    height="0px"
    orientation="right"
    width="0px"
  >
    <div
      class="Drawerstyles__CloseIcon-sc-34en6x-3 eSIqqc"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Drawerstyles__Content-sc-34en6x-2 hyZwjZ"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Drawer /w as drawer top 1`] = `
<div
  class="Drawerstyles__Fade-sc-34en6x-0 cIwlCK"
>
  <div
    class="Drawerstyles__Box-sc-34en6x-1 dAAfTG"
    height="0px"
    orientation="top"
    width="0px"
  >
    <div
      class="Drawerstyles__CloseIcon-sc-34en6x-3 eSIqqc"
    >
      <svg
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
        />
      </svg>
    </div>
    <div
      class="Drawerstyles__Content-sc-34en6x-2 hyZwjZ"
    >
      content
    </div>
  </div>
</div>
`;
